# cmk

./: Cargo.toml  README.md
.github/workflows/: build-base-image.yml  build-toolchain-release.yml  release.yml
builder-images/base/: Dockerfile.el7-x86_64  Dockerfile.el8-aarch64  Dockerfile.el8-x86_64  build-clang.sh  build-deps.sh  fetch.sh
builder-images/recipe/: Dockerfile.el7-x86_64  Dockerfile.el8-aarch64  Dockerfile.el8-x86_64
crates/cmk-builder/: Cargo.toml  build.rs
crates/cmk-builder/src/: cmake.rs  container.rs  host.rs  lib.rs  linux.rs  macos.rs  package.rs  provenance.rs  recipe.rs  runtime.rs  source.rs  stages.rs
crates/cmk-cli/: Cargo.toml
crates/cmk-cli/src/: main.rs
crates/cmk-cli/src/cmd/: legacy.rs  mod.rs
crates/cmk-cli/src/cmd/toolchain/: build.rs  exec.rs  gc.rs  install.rs  list.rs  mod.rs  remove.rs  use.rs  which.rs
crates/cmk-config/: Cargo.toml
crates/cmk-config/src/: lib.rs
crates/cmk-core/: Cargo.toml
crates/cmk-core/src/: config.rs  error.rs  lib.rs  manifest.rs  platform.rs  process.rs  store.rs  version.rs
crates/cmk-deps/: Cargo.toml
crates/cmk-deps/src/: lib.rs
crates/cmk-pkg/: Cargo.toml
crates/cmk-pkg/src/: lib.rs
crates/cmk-project/: Cargo.toml
crates/cmk-project/src/: cmake.rs  default.rs  lib.rs
crates/cmk-registry/: Cargo.toml
crates/cmk-registry/src/: github.rs  http.rs  lib.rs  mirror.rs
crates/cmk-shim/: Cargo.toml
crates/cmk-shim/src/: main.rs
crates/cmk-toolchain/: Cargo.toml
crates/cmk-toolchain/src/: activate.rs  extract.rs  fetch.rs  install.rs  lib.rs  shim.rs
docs/: design.md
src/: cmake.rs  cmake_ast.rs  cmd.rs  config.rs  default.rs  env.rs  lib.rs  main.rs  process.rs
