[package]
name = "cmk"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for managing CMake projects"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
globset = "0.4"
octocrab = "0.49.5"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
serde = "1.0.228"
serde_json = "1.0.149"
toml = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["net", "macros", "rt-multi-thread"] }
crossbeam = "0.8"

[profile.release]
lto = true
#strip = true
