[package]
name = "cmk"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for managing CMake projects"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
globset = "0.4"
octocrab = { version = "0.49.5", default-features = false, features = ["follow-redirect", "retry", "rustls", "timeout", "tracing", "default-client", "rustls-aws-lc-rs", "jwt-rust-crypto"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
serde = "1.0.228"
serde_json = "1.0.149"
toml = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["fs", "net", "macros", "rt-multi-thread", "process", "signal"] }

[profile.release]
lto = true
strip = true
