[workspace]
resolver = "2"
members = [
    "crates/cmk-cli",
    "crates/cmk-core",
    "crates/cmk-config",
    "crates/cmk-project",
    "crates/cmk-pkg",
    "crates/cmk-toolchain",
    "crates/cmk-registry",
    "crates/cmk-builder",
    "crates/cmk-deps",
    "crates/cmk-shim",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "CMake project + clang/LLVM toolchain manager"

[workspace.dependencies]
anyhow = "1.0.102"
thiserror = "2"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0"
sha2 = "0.10.9"
hex = "0.4"
url = "2"
dirs = "5"
tar = "0.4"
zstd = "0.13"
flate2 = "1"
xz2 = "0.1"
walkdir = "2"
tempfile = "3"
libc = "0.2"
futures = "0.3.32"
globset = "0.4"
octocrab = { version = "0.49.5", default-features = false, features = ["follow-redirect", "retry", "rustls", "timeout", "tracing", "default-client", "rustls-aws-lc-rs", "jwt-rust-crypto"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
tokio = { version = "1.50.0", features = ["fs", "io-std", "io-util", "net", "macros", "rt-multi-thread", "process", "signal"] }
tree-sitter = "0.25"
tree-sitter-cmake = "0.7"

[profile.release]
lto = true
strip = true
