[package]
name = "cmk-deps"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cmk-core = { path = "../cmk-core" }
cmk-config = { path = "../cmk-config" }
cmk-toolchain = { path = "../cmk-toolchain" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
walkdir.workspace = true
tokio.workspace = true
