[package]
name = "cmk-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cmk-core = { path = "../cmk-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
url.workspace = true
reqwest.workspace = true
tokio.workspace = true
