[package]
name = "cmk-toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cmk-core = { path = "../cmk-core" }
cmk-registry = { path = "../cmk-registry" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tar.workspace = true
zstd.workspace = true
flate2.workspace = true
xz2.workspace = true
url.workspace = true
walkdir.workspace = true
tempfile.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tokio.workspace = true
futures.workspace = true
